<resources>
    <string name="app_name">Eating With Friends - Graded Assignment</string>
    <string name="title_friends">Friends</string>
    <string name="title_bookings">Bookings</string>
    <string name="title_notifications">Notifications</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="print">Print</string>
    <string name="placeholder">Hello There!</string>
    <string name="restaurants">Restaurants</string>
    <string name="title_setting">Settings</string>
    <string name="default_message">Remember that we are going out eating today :)</string>

    <string-array name="placeholders">
        <item>Anders</item>
        <item>Signe</item>
        <item>Martina</item>
        <item>Nikita</item>
    </string-array>
</resources>
