<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_bookings">

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.fredrikpedersen.eatingwithfriends_gradedassignment.ui.friends.FriendsFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/navigation_bookings"
        android:name="com.fredrikpedersen.eatingwithfriends_gradedassignment.ui.bookings.BookingsFragment"
        android:label="@string/title_bookings"
        tools:layout="@layout/fragment_bookings" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.fredrikpedersen.eatingwithfriends_gradedassignment.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>