<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RestaurantBookingActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/pickTimeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/pick_time"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <Button
        android:id="@+id/pickDateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/pick_date"
        app:layout_constraintBaseline_toBaselineOf="@+id/pickTimeBtn"
        app:layout_constraintEnd_toStartOf="@+id/pickTimeBtn" />

    <Button
        android:id="@+id/printBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="printDateAndTime"
        android:text="@string/print"
        app:layout_constraintBaseline_toBaselineOf="@+id/pickTimeBtn"
        app:layout_constraintStart_toEndOf="@+id/pickTimeBtn" />

    <TextView
        android:id="@+id/dateTimePrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="@+id/pickTimeBtn"
        app:layout_constraintStart_toStartOf="@+id/pickTimeBtn"
        app:layout_constraintTop_toBottomOf="@+id/pickTimeBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>